JS Edit function has been added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
 </head>
+
 <body>
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -27,30 +30,33 @@
           </div>
         </div>
       </nav> -->
-      <header>
-          <h1>Todos List App</h1>
-      <form id="new_task_form">
-          <input type="text" placeholder="What do you have planned?" id="new_task_input" />
-          <input type="submit" id="new_task_submit" value="Add Value">
-      </form>
+    <header>
+        <h1>Todos List App</h1>
+        <form id="new_task_form">
+            <input type="text" placeholder="What do you have planned?" id="new_task_input" />
+            <input type="submit" id="new_task_submit" value="Add Value">
+        </form>
     </header>
-      <main>
-        <section>
-            <h2>Your Tasks</h2>
-            <div id="tasks">
-                <div class="content">
-                    <div class="task">
-                        <input type="text" class="text" value="my text" readonly/>
-                    </div>
-                </div>
-                <div class="actions">
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
-                </div>
-            </div>
-        </section>
-      </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-      <script src="./script.js"></script>
+    <main>
+        <section class="task_list">
+			<h2>Tasks</h2>
+			<div id="tasks">
+				<!-- <div class="task">
+					<div class="content">
+						<input type="text" class="text" value="A new task" readonly>
+					</div>
+					<div class="actions">
+						<button class="edit">Edit</button>
+						<button type="button"  class="delete">Delete</button>
+					</div>
+				</div> -->
+			</div>
+		</section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
